# far-cert

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json
cmake/far/: CMakeLists.txt
cmake/openssl/: CMakeLists.txt
src/: cert.def  main.c
